# trade-strat-framework

./: LICENSE  README.md  pyproject.toml
sql/: create_analysis_table.sql  create_database.sql  create_quotes_table.sql
trade_strat_framework/: __init__.py  analyze.py  trade.py
