[tool.poetry]
name = "trade-strat-framework"
version = "0.1.0"
description = "Python framework for algorithmic trading"
authors = ["Tim Campbell <campbell.timothym@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "0.18.1"	# temp fix for oauthlib issue in 0.18.2
tda-api = "1.3.3"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b1", allow-prereleases = true}

[tool.poetry2conda]
name = "py-tda-cli"

[tool.poetry2conda.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
